--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viz_1</title>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="styles.css"/>
     <style>
         #chart {
             overflow-y: auto;
@@ -19,8 +20,10 @@
 </head>
 
 <body>
-
-
+    <div class="text">
+        <h2 class="title">Horas de mision por pais dividido por ocupacion</h2>
+        <h4 class="nombres">Nicolas Cantarovici - Florian Reyes</h4>
+    </div>
     <div id="chart"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
