modify main index.html and change fonts

--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -5,19 +5,31 @@
     <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-    <div class="stars"></div>
-    <div id="stars"></div>
+    <div class="bg-image"></div>
     <div class="container">
-      <h1>Data Visualizations</h1>
+      <div class="astronaut-icon">
+        <img class="icon" src="astronauta.png" alt="Astronaut icon">
+      </div>
+      <h1>Astronautas.csv</h1>
       <nav>
         <ul>
-          <li><a href="dataviz_1_dark/index.html">Data Visualization 1</a></li>
-          <li><a href="dataviz_2_dark/index.html">Data Visualization 2</a></li>
-          <li><a href="dataviz_3_dark/index.html">Data Visualization 3</a></li>
-          <li><a href="dataviz_4_dark/index.html">Data Visualization 4</a></li>
+            <div class="links_left">
+                <li><a href="dataviz_1_dark/index.html">Data Visualization 1</a></li>
+                <li><a href="dataviz_2_dark/index.html">Data Visualization 2</a></li>
+            </div>
+            <div class="links_right">
+                <li><a href="dataviz_3_dark/index.html">Data Visualization 3</a></li>
+                <li><a href="dataviz_4_dark/index.html">Data Visualization 4</a></li>
+            </div>
         </ul>
       </nav>
-      <h3>by: Nicolas Cantarovici & Florian Reyes</h3>
+      <div class="by">
+        <h3>by: </h3>
+        <a href="https://github.com/florianreyes/Visualizacion_Cantarovici_Reyes/tree/main/vd_s1_tp2_Cantarovici_Reyes">
+        <h3 class="nombres">Nicolas Cantarovici & Florian Reyes</h3>
+    </a>
+      </div>
     </div>
   </body>
 </html>
+
