--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <div class="text">
-        <h2 class="title">Horas de mision por año</h2>
+        <h2 class="title">Densidad de horas de misión por país</h2>
         <h4 class="nombres">Nicolas Cantarovici - Florian Reyes</h4>
     </div>
     <div id="chart"></div>
