--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -3,14 +3,17 @@
   <head>
     <title>Navigation Menu</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Background Image</title>
   </head>
   <body>
-    <div class="bg-image"></div>
+    <div class="stars">
+        <div id="stars"></div>
+      </div>
     <div class="container">
       <div class="astronaut-icon">
-        <img class="icon" src="astronauta.png" alt="Astronaut icon">
+        <img class="icon" src="./assets/astronauta.png" alt="Astronaut icon">
       </div>
-      <h1>Astronautas.csv</h1>
+      <h1>Exploracion espacial</h1>
       <nav>
         <ul>
             <div class="links_left">
@@ -32,4 +35,3 @@
     </div>
   </body>
 </html>
-
