--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viz_3</title>
+    <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="styles.css"/>
     <style>
