--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Navigation Menu</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <title>Background Image</title>
   </head>
   <body>
