add responsive for mobile

--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
@@ -14,15 +14,15 @@
             overflow-y: auto;
         }
 
-        #chart svg {
+        /* #chart svg {
             max-width: initial;
-        }
+        } */
     </style>
 </head>
 
 <body>
 
-    <a href="../index.html">
+    <a class="back-button"href="../index.html">
         <img src="../assets/arrow.png" alt="">
     </a>
 
