--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Navigation Menu</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="./assets/favicon.png">
     <title>Background Image</title>
@@ -18,11 +19,11 @@
       <nav>
         <ul>
             <div class="links_left">
-                <li><a href="dataviz_1_dark/index.html">Data Visualization 1</a></li>
+                <li class="one"><a href="dataviz_1_dark/index.html">Data Visualization 1</a></li>
                 <li><a href="dataviz_2_dark/index.html">Data Visualization 2</a></li>
             </div>
             <div class="links_right">
-                <li><a href="dataviz_3_dark/index.html">Data Visualization 3</a></li>
+                <li class="three"><a href="dataviz_3_dark/index.html">Data Visualization 3</a></li>
                 <li><a href="dataviz_4_dark/index.html">Data Visualization 4</a></li>
             </div>
         </ul>
