--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body>
-    <a href="../index.html">
+    <a class="back-button"href="../index.html">
         <img src="../assets/arrow.png" alt="">
     </a>
     
