update main index and styles

--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -19,12 +19,13 @@
       <nav>
         <ul>
             <div class="links_left">
-                <li class="one"><a href="dataviz_1_dark/index.html">Data Visualization 1</a></li>
-                <li><a href="dataviz_2_dark/index.html">Data Visualization 2</a></li>
+                <li class="one"><a href="dataviz_1_dark/index.html">Boom espacial de 2016
+                </a></li>
+                <li><a href="dataviz_2_dark/index.html"> 10.000 horas en el espacio</a></li>
             </div>
             <div class="links_right">
-                <li class="three"><a href="dataviz_3_dark/index.html">Data Visualization 3</a></li>
-                <li><a href="dataviz_4_dark/index.html">Data Visualization 4</a></li>
+                <li class="three"><a href="dataviz_3_dark/index.html">La brecha espacial</a></li>
+                <li><a href="dataviz_4_dark/index.html">Ingenieros Aeroespaciales </a></li>
             </div>
         </ul>
       </nav>
@@ -37,3 +38,9 @@
     </div>
   </body>
 </html>
+
+<!-- 
+  Boom espacial de 2016
+  10.000 horas en el espacio
+  La brecha espacial
+  Ingeniero Aeroespacial, el trabajo galactico -->
