Unify fonts, reduce amount of xticks, add conditional filling in dv4, add red dot in dv1

--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -21,10 +21,10 @@
             <div class="links_left">
                 <li class="one"><a href="dataviz_1_dark/index.html">Boom espacial de 2016
                 </a></li>
-                <li><a href="dataviz_2_dark/index.html"> 10.000 horas en el espacio</a></li>
+                <li><a href="dataviz_2_dark/index.html">La brecha espacial</a></li>
             </div>
             <div class="links_right">
-                <li class="three"><a href="dataviz_3_dark/index.html">La brecha espacial</a></li>
+                <li class="three"><a href="dataviz_3_dark/index.html">10.000 horas en el espacio</a></li>
                 <li><a href="dataviz_4_dark/index.html">Ingenieros Aeroespaciales </a></li>
             </div>
         </ul>
