add readme, final touches

--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_2_dark/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viz_2</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="styles.css"/>
     <style>
         #chart {
@@ -29,7 +28,8 @@
     <div class="container_grafico">
         <div class="text">
             <h2 class="title">La brecha espacial</h2>
-            <h4 class="subtitle">Distribución de astronautas por nacionalidad y género en misiones espaciales</h4>
+            <h4 class="subtitle">Distribución de astronautas por nacionalidad y género en misiones espaciales.</h4>
+            <h4 class="subtitle"> Fuerte dominancia del genero masculino en cantidad de astronautas.</h4>
         </div>
         <div id="chart"></div>
         <footer>
