--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_3_dark/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viz_3</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="styles.css"/>
     <style>
         #chart {
@@ -28,7 +27,8 @@
     <div class="container_grafico">
         <div class="text">
             <h2 class="title">10.000 horas en el espacio</h2>
-            <h4 class="subtitle">La competencia entre EE.UU y Rusia</h4>
+            <h4 class="subtitle">La competencia entre EE.UU y Rusia.</h4>
+            <h4 class="subtitle">Observamos una fuerte densidad entre las 4,000 y 5,000 horas mientras que algunos valientes pasaron mas de 10,000 horas en el espacio.</h4>
         </div>
         <div id="chart"></div>
         <footer>
