--- a/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/dataviz_4_dark/index.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Viz_4</title>
     <link rel="icon" type="image/x-icon" href="../assets/favicon.png">
-    <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <link rel="stylesheet" href="styles.css"/>
     <style>
         #chart {
@@ -28,8 +27,10 @@
 
     <div class="container_grafico">
         <div class="text">
-            <h2 class="title">Ingeniero Aeroespacial, el trabajo galactico</h2>
-            <h4 class="subtitle">Una exploración de las profesiones de los astronautas en la industria espacial</h4>
+            <h2 class="title">Ingeniero Aeroespacial, el trabajo galáctico</h2>
+            <h4 class="subtitle">Una exploración de las profesiones de los astronautas en la industria espacial.</h4>
+            
+            <h4 class="subtitle"> Los <strong>ingenieros aeroespaciales</strong> predominan por sobre los <span>pilotos, comandantes, especialista aeroespaciales y participantes de vuelos espaciales</span></h4>
         </div>
         <div id="chart"></div>
         <footer>
