--- a/vd_s1_tp2_Cantarovici_Reyes/index.html
+++ b/vd_s1_tp2_Cantarovici_Reyes/index.html
@@ -30,7 +30,7 @@
         </ul>
       </nav>
       <div class="by">
-        <h3>by: </h3>
+        <h3>Hecho por: </h3>
         <a href="https://github.com/florianreyes/Visualizacion_Cantarovici_Reyes/tree/main/vd_s1_tp2_Cantarovici_Reyes">
         <h3 class="nombres">Nicolas Cantarovici & Florian Reyes</h3>
     </a>
